[gd_scene load_steps=7 format=3 uid="uid://dquk28ttg46kk"]

[ext_resource type="Texture2D" uid="uid://uenbgy6awjrc" path="res://assets/sprites/ball.png" id="1_m41jn"]
[ext_resource type="Script" path="res://scenes/ball/ball.gd" id="1_vvat2"]
[ext_resource type="AudioStream" uid="uid://bdo8vy4087046" path="res://assets/sounds/impact_block.wav" id="3_i64wm"]
[ext_resource type="AudioStream" uid="uid://cs6xnp18em2xv" path="res://assets/sounds/impact_paddle.wav" id="4_wos70"]
[ext_resource type="AudioStream" uid="uid://f0cllyq860ac" path="res://assets/sounds/impact_screen.wav" id="5_jvhmf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1iwfy"]

[node name="Ball" type="Area2D"]
position = Vector2(400, 525)
script = ExtResource("1_vvat2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_m41jn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1iwfy")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ImpactBlockSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_i64wm")

[node name="ImpactPaddleSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_wos70")

[node name="ImpactScreenSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jvhmf")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
